--- a/.github/ISSUE_TEMPLATE/bug_report_form.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report_form.yaml
@@ -65,7 +65,7 @@ body:
 - type: dropdown
   id: priority
   attributes:
-    label: Priority
+    label: Priority for this bug is:
     description: "High Priority= must be completed as soon possible, Medium Priority= need to be completed but can wait after high priority items, Low Priority are \"nice to have\" changes."
     multiple: false
     options:
