--- a/.github/ISSUE_TEMPLATE/bug_report_form.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report_form.yaml
@@ -1,6 +1,6 @@
 name: Bug Report Form
 description: File a bug Report for our Tilli Documentation
-title: "As a [type of user], I want [an action] so that [a benefit/a value]."
+title: "Found a [bug], [spelling error],[wrong info or link]"
 labels: ["bug","documentation"]
 assignees:
   - Tilliforkids
