--- a/.github/ISSUE_TEMPLATE/bug_report_form.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report_form.yaml
@@ -65,7 +65,7 @@ body:
 - type: dropdown
   id: priority
   attributes:
-    label: How did you download the software?
+    label: Priority
     options:
       - High Priority
       - Medium Priority
