--- a/.github/ISSUE_TEMPLATE/bug_report_form.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report_form.yaml
@@ -66,6 +66,7 @@ body:
   id: priority
   attributes:
     label: Priority
+    description: "Primary user stories must be completed, while secondary user stories are \"nice to have\" changes."
     options:
       - High Priority
       - Medium Priority
