--- a/.github/ISSUE_TEMPLATE/bug_report_form.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report_form.yaml
@@ -66,7 +66,7 @@ body:
   id: priority
   attributes:
     label: Priority
-    description: "Primary user =stories must be completed, while secondary user stories are \"nice to have\" changes."
+    description: "High Priority are must be completed as soon possible, Medium Priority= need to be completed but can wait after high priority items, Low Priority are \"nice to have\" changes"
     options:
       - High Priority
       - Medium Priority
