--- a/.github/ISSUE_TEMPLATE/bug_report_form.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report_form.yaml
@@ -67,6 +67,7 @@ body:
   attributes:
     label: Priority
     description: "High Priority are must be completed as soon possible, Medium Priority= need to be completed but can wait after high priority items, Low Priority are \"nice to have\" changes"
+    multiple: false
     options:
       - High Priority
       - Medium Priority
